tests/fixtures/invalid/bool_lshift_bytes.py
# Cannot left shift Bool and Bytes
x: bool = True << b"hello"
